# uforest

./: .dvcignore  .gitignore  README.md  data.dvc  docker-compose.yaml  main.py  models.dvc  nginx.conf  pyproject.toml
app/: .env.template  Dockerfile  api.py  config.py  notebook.ipynb  requirements.txt  testing.db
app/auth/: authenticate.py  hash_password.py  jwt_handler.py
app/database/: database.py
app/models/: schemas.py  user.py
app/routes/: __init__.py  balance.py  home.py  predict.py  tools.py  user.py
app/services/: image_service.py  logger.py
app/services/crud/: __init__.py  balance_service.py  prediction_service.py  user_service.py
app/tests/: conftest.py  test_api.py  test_db.py
configs/: convnextv2_maskrcnn_tree.py
ml/: .env.template  Dockerfile  celery_app.py  config.py  pyproject.toml  requirements.txt  test.py
ml/.dvc/: config
ml/configs/: convnextv2_maskrcnn_tree.py  mask-rcnn_convnext-v2-b_fpn_lsj-3x-fcmae_coco.py
ml/examples/: example.py
ml/notebooks/: selery_client.ipynb
ml/src/: callback.py  model_loader.py  predict.py  preprocess.py
ml/src/tree_detector/: config.py  inference.py  model.py  utils.py
notebooks/: Untitled-1.ipynb  data_overview.ipynb  improving_model.ipynb  prediction.ipynb  test.ipynb
src/: data_overview.ipynb
web_ui/: .env.template  Dockerfile  app.py  config.py  requirements.txt
web_ui/notebooks/: check_geo_tiff.ipynb
web_ui/src/: logger.py
web_ui/src/pages/: __init__.py  home.py  latex_chat.py  prediction_history.py  transaction_history.py
web_ui/src/pages/tree_maps/: tree_map.py
web_ui/src/pages/tree_maps/components/: form.py  map.py
web_ui/src/pages/tree_maps/example/: trees.json
web_ui/src/pages/tree_maps/utils/: geotiff_loader.py  helpers.py
web_ui/src/requests/: balance.py  prediction.py  user.py
