[project]
name = "uforest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.5.3",
    "detectron2",
    "matplotlib>=3.10.1",
    "minio>=7.2.15",
    "numpy>=2.2.5",
    "opencv-python>=4.12.0.88",
    "pycocotools==2.0.8",
    "pydantic-settings>=2.10.1",
    "rasterio>=1.4.3",
    "requests>=2.32.3",
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
    "torchmetrics>=1.7.1",
    "torchvision>=0.22.0",
]

[tool.uv.sources]
detectron2 = { git = "https://github.com/facebookresearch/detectron2.git" }

[tool.uv.workspace]
members = [
    "venv",
]
